added page.js for links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,4 +3,6 @@ body, html {
     padding: 0;
     overflow-x: hidden; /* Prevent horizontal overflow */
   }
-  
+::-webkit-scrollbar{
+  display: none;
+}
