--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* Prevent horizontal overflow */
-  }
+    overflow-x: hidden; }
 ::-webkit-scrollbar{
   display: none;
 }
